# pydt-range

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
datetime_range/: __init__.py  const.py  date_range.py  datetime_range.py
pydt_range/: __init__.py  const.py  datetime_range.py
simple_date_range/: const.py  date_range.py
tests/: test_datetime_range.py  test_pydt_range.py  test_simple_date_range.py
