[tool.poetry]
name = "simple-date-range"
version = "1.0.0"
description = "Simple Date Range Generator"
authors = ["Kirill Olar <kirill.olar26@gmail.com>"]
repository = "https://github.com/skroll182/simple-date-range"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
