[tool.poetry]
name = "pydt-range"
version = "1.1.0"
description = "pydt-range is purely python mini library that allows to iterate over datetime objects with a specified step (similar to built-in range())"
authors = ["Kirill Olar <kirill.olar26@gmail.com>"]
repository = "https://github.com/skroll182/pydt-range"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
